--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <ol id="game-board">
           <li data-col="1" data-row="1"></li>
           <li data-col="2" data-row="1"></li>
-          <li data-col="3" data-row="1"</li>
+          <li data-col="3" data-row="1"></li>
 
           <li data-col="1" data-row="2"></li>
           <li data-col="2" data-row="2"></li>
